tests/marouter/errors/format/vm/vm_num_districts/errors.marouter
Error: End of file while reading input_od_vm.fma.
Quitting (on error).
